# simple-goodreads

./: .dockerignore  .flake8  .gitignore  Dockerfile  LICENSE  Makefile  README.md  config.example.env  docker-compose.yaml  pyproject.toml
docs/: GoodReads APIs.postman_collection.json
fixtures/: book.json  bookmark.json  review.json  user.json
src/: manage.py
src/accounts/: admin.py
src/accounts/factories/: user.py
src/accounts/migrations/: 0001_initial.py
src/accounts/models/: user.py
src/accounts/serializers/: __init__.py
src/accounts/serialzers/: authentication.py
src/accounts/services/: commands.py  queries.py
src/accounts/urls/: authentication.py
src/accounts/viewsets/: __init__.py  authentication.py
src/books/: admin.py  enums.py  signal.py
src/books/factories/: book.py  bookmark.py  review.py
src/books/migrations/: 0001_initial.py
src/books/models/: __init__.py  book.py  bookmark.py  review.py  stat.py
src/books/serialzers/: book.py  bookmark.py  review.py
src/books/services/commands/: book.py  bookmark.py  review.py
src/books/services/queries/: bookmark.py  review.py
src/books/urls/: book.py
src/books/viewsets/: __init__.py  book.py  review.py
src/commons/: fraud_detection.py  mixins.py  models.py  swagger.py  throttles.py  views.py  viewsets.py
src/commons/management/commands/: seeder.py
src/core/: asgi.py  celery.py  urls.py  wsgi.py
src/core/settings/django/: base.py  local.py  production.py  test.py
src/fixtures/: review.json  user.json
src/routers/: accounts.py  books.py  routers.py  urls.py
(+7 files in other folders)
